Fixed bug #39993 (tr_TR.UTF-8 locale has problems with PHP).